# jwt_generator

./: Cargo.toml  README.md  config.toml
src/: main.rs
