[package]
name = "jwt_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "3.2.16"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "=8.1.1"
toml = "0.5.9"
thiserror = "1.0.38"
